--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-logo">Header logo</div>
-            <div class="right-links">
+        <div class="header-logo white-text">Header logo</div>
+            <div class="right-links white-text">
                 <div><a href="#">header link one</a></div>
                 <div><a href="#">header link two</a></div>
                 <div><a href="#">header link three</a></div>
@@ -18,12 +18,15 @@
     </div>
 
     <div class="Top">
-        <h1>This website is awesome!</h1>
-        <div>This website has some subtext that goes here under the main title.
+        <div class="top-page-text">
+            <div class="hero-main-text white-text">This website is awesome!</div>
+            <div class="white-text">This website has some subtext that goes here under the main title.
             It's a smaller font and the color is lower contrast</div>
-        <button>Sign up</button>
-        <img src="./images/Peashooter.jpg" alt="peashooter smoking a blunt">
-
+            <button class="top-button white-text">Sign up</button>
+        </div>
+        <div class="image">
+            <img src="./images/Peashooter.jpg" alt="peashooter smoking a blunt" width="600px"  height="200px">
+        </div>
     </div>
 </body>
 </html>
