--- a/index.html
+++ b/index.html
@@ -28,5 +28,25 @@
             <img src="./images/Peashooter.jpg" alt="peashooter smoking a blunt" width="600px"  height="200px">
         </div>
     </div>
+
+    <div class="sub-header">Some random information.</div>
+    <div class="illustration">
+        <div class="info">
+            <div class="blank-image"></div>
+            <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+            <div class="blank-image"></div>
+            <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+            <div class="blank-image"></div>
+            <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+            <div class="blank-image"></div>
+            <div class="text">this is some subtext under an illustration or image</div>
+        </div>
+    </div>
 </body>
 </html>
