Added 'Call to action' section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="header">
+    <div class="header darkblue-background">
         <div class="header-logo white-text">Header logo</div>
             <div class="right-links white-text">
                 <div><a href="#">header link one</a></div>
@@ -17,7 +17,7 @@
             </div> 
     </div>
 
-    <div class="Top">
+    <div class="Top darkblue-background">
         <div class="top-page-text">
             <div class="hero-main-text white-text">This website is awesome!</div>
             <div class="white-text">This website has some subtext that goes here under the main title.
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <div class="sub-header">Some random information.</div>
+    <div class="sub-header darkblue-text">Some random information.</div>
     <div class="illustration">
         <div class="info">
             <div class="blank-image"></div>
@@ -49,10 +49,19 @@
         </div>
     </div>
     <div class="testimonial">
-        <div class="thor-quote">This is an inspiring quote, or a testimonial from
+        <div class="thor-quote darkblue-text">This is an inspiring quote, or a testimonial from
             a customer. Maybe it's just filling up space, or maybe people will actually read it?
             Who knows? All I know is that it looks nice.
-        <div class="From-thor">-Thor,God of Thunder</div>
+        <div class="From-thor darkblue-text">-Thor,God of Thunder</div>
+        </div>
+    </div>
+    <div class="Call-to-action">
+        <div class="Notquitefooter">
+            <div class="amrunningoutofnames">
+                <div class="Calltoaction-headerfont white-text">Call to action! It's time!</div>
+                <p class="Calltoaction-font white-text">sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="bottom-button white-text">Sign up</button>
         </div>
     </div>
 </body>
