--- a/index.html
+++ b/index.html
@@ -64,5 +64,9 @@
             <button class="bottom-button white-text">Sign up</button>
         </div>
     </div>
+
+    <div class="footer darkblue-background">
+        <div class="copyright white-text">Copyright © The Odin Project 2023</div>
+    </div>
 </body>
 </html>
